--- a/planning.tex
+++ b/planning.tex
@@ -243,7 +243,7 @@ Preparar la presentaci\'on XCM.\ref{paper-xcm}
 \\Difusi\'on al alumnado \ref{difusion}
 \\Aprender estad\'istica bayesiana \ref{bayes}
 \subsection*{Octubre}
-Ajuste de datos, aprender librerias de python \ref{python-fit}
+Ajuste de datos, aprender librerias de python. ANGEL CABRON \ref{python-fit}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\bibliographystyle{IEEEtran.bst}
 %\bibliography{./bib} % local
