--- a/planning.tex
+++ b/planning.tex
@@ -138,6 +138,7 @@ Crear un script que genere un array de casos en los que var\'ie: ratio de flujos
 \item
 \label{item-observ-science-interest}
 Buscar casos de inter\'es cient\'ifico. 
+\item Ajustar el array de casos con parámetros de estadísticos y calcular los intervalos de confianza
 \eenum
 %%%%%%%%%%%%%%%%%%
 \item
@@ -243,7 +244,7 @@ Preparar la presentaci\'on XCM.\ref{paper-xcm}
 \\Difusi\'on al alumnado \ref{difusion}
 \\Aprender estad\'istica bayesiana \ref{bayes}
 \subsection*{Octubre}
-Ajuste de datos, aprender librerias de python. ANGEL CABRON \ref{python-fit}
+Ajuste de datos, aprender librerias de python \ref{python-fit}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\bibliographystyle{IEEEtran.bst}
 %\bibliography{./bib} % local
